tests/NormalTests/paczka1/small_fuzzy/17620265.err
Error in line 1: UOZE A207 47,8
Error in line 3: UOZE S165 32,3
Error in line 6: UOZE A207 91,4
